--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">NTUCSRepo</string>
+    <string name="app_name">NTU-CS Repo</string>
     <string name="action_settings">Settings</string>
+    <string name="main_activity_title">NTU Computer Science Repository</string>
+    <string name="choose_resources">Choose resources</string>
 </resources>
