--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
-    <string name="app_name">NTU-CS Repo</string>
+    <string name="app_name" translatable="false">NTU-CS Repo</string>
+    <string name="main_activity_title" translatable="false">NTU CS Repository</string>
     <string name="action_settings">Settings</string>
-    <string name="main_activity_title">NTU CS Repository</string>
     <string name="choose_resources">Choose resources</string>
     <string name="resource_type_projects">Course Projects</string>
     <string name="resource_type_fyps">Final Year Projects</string>
